# Effective-and-modern-C-programming-tasks

./: .gitignore  copy_semantics  copy_semantics.cpp
lab01/: copy_and_move_semantics  copy_and_move_semantics.cpp
lab02/lab2/: CMakeLists.txt  DynamicContainer.h  Ex1_StaticContainer  Ex2_StaticContainer2  Ex2_StaticContainer2.cpp  Ex3_DynamicContainer  Ex4_String  StaticContainer.h  StaticContainer2.h  String.h
lab03/: Printer.cpp  function_pointers  function_pointers.cpp  lambda_expressions.cpp
lab04/: function_template_overloading  function_template_overloading.cpp  function_templates  function_templates.cpp  template_parameter  template_parameter.cpp
lab05/: dynamicVector.h  ex1_Pair  ex1_Pair.cpp  ex2_staticVector.cpp  ex3_dynamicVector.cpp  ex4_conversion.cpp  staticVector.h
lab06/: ex1_variadicFunctions  ex1_variadicFunctions.cpp  ex3_Mixins  ex3_Mixins.cpp  ex4_MultiVector  ex4_MultiVector.cpp  proxy  proxy.cpp
lab07/: Filter.h  Matrix.h  Range.h  ex_7_1_Range  ex_7_2_MatrixModifiers  ex_7_3_MatrixIterator  ex_7_3_MatrixIterator.cpp  ex_7_4_Filter
lab08/: Vector.h  ex_8_1_type_traits  ex_8_2_Vector_traits  ex_8_3_Vector_policies  ex_8_3_Vector_policies.cpp  ex_8_4_Vector_operators  ex_8_4_Vector_operators.cpp
lab09/: CMakeLists.txt  ex_9_1_stdalgorithms.cpp  ex_9_2_words  ex_9_2_words.cpp  ex_9_3_Trie  ex_9_3_Trie.cpp  words
lab10/: ex_10_1.cpp  ex_10_2.cpp  ex_10_2_chrono.cpp  ex_10_3_chrono.cpp
lab11/: ex_11_1_literals.cpp  ex_11_2.cpp  ex_11_3.cpp
lab12/: random.cpp  sum_ascii.cpp
lab12/mandelbrot/: ex_11_2_Mandelbrot.cpp
lab13/: constinit  constinit.cpp  ex1_KlasyRekurencyjne.cpp  ex3_IntegerList.cpp  ex_13_2.cpp
lab14/Ex1/: CMakeLists.txt  VectorModule.cppm  main.cpp
lab14/StringProject/: CMakeLists.txt  MyString.h  String.h  string_tests.cpp
lab7/: CMakeLists.txt  Filter.h  Matrix.h  Range.h  ex_7_1_Range.cpp  ex_7_2_MatrixModifiers.cpp  ex_7_4_Filter.cpp
lab8/: CMakeLists.txt  Vector.h  ex_8_1_type_traits.cpp  ex_8_2_Vector_traits.cpp
